--- a/About.html
+++ b/About.html
@@ -23,7 +23,7 @@
   </header>
 
   <main>
-    <section class="about-hero">
+    <section class="About-hero">
       <div class="container hero-content">
         <h2>ABOUT US</h2>
         <p>Elsim Engineering Firm is a top provider of electrical services with over Fifteen years of experience. We are dedicated to powering the future with innovative electrical engineering solutions. With a team of experienced professionals, we specialize in the design, implementation, and maintenance of electrical systems that meet the highest standards of safety and efficiency. Our commitment to excellence drives us to deliver customized solutions tailored to our clients' unique needs. Join us as we illuminate the path to a sustainable and electrifying tomorrow...</p>
