--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
             <li><strong>Repairs:</strong> Addressing issues like faulty wiring, broken outlets, or malfunctioning appliances.</li>
             <li><strong>Upgrades:</strong> Modernizing electrical panels, adding surge protection, or upgrading to energy-efficient lighting.</li>
             <li><strong>Maintenance:</strong> Regularly inspecting and maintaining electrical systems to ensure safety and efficiency.</li>
-            <li><strong>Commercial Construction Services:</strong> Providing power solutions, lighting design, and other electrical services for businesses and commercial properties.Commercial construction of overhead line and underground tunnels installation of transformers</li>
+            <li><strong>Commercial Construction Services:</strong> Providing power solutions, lighting design, and other electrical services for businesses and commercial properties such as commercial construction of overhead line and underground tunnels installation of transformers</li>
             <li><strong>Specialized Services:</strong> Including solar panel installation, emergency lighting, and security systems.</li>
             
           </ul>
